--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pycparser==2.20
 pydantic==1.5.1
 PyJWT==1.7.1
 python-dateutil==2.8.1
+python-dotenv==0.13.0
 redis==3.5.1
 requests==2.23.0
 s3transfer==0.3.3
